[package]
name = "lykoi_data"
version = "0.6.0"
edition = "2024"
authors = ["parchii"]
description = "data"
repository = "https://github.com/wainggan/lykoi_data"
license = "MIT"

[features]
default = ["dag", "point", "rng", "math", "color", "sod"]
point = []
dag = []
rng = []
math = []
color = []
sod = []

[dependencies]
num-traits = "0.2.19"
