[package]
name = "lykoi_data"
version = "0.7.0"
edition = "2024"
authors = ["parchii"]
description = "data"
repository = "https://github.com/wainggan/lykoi_data"
readme = "readme.md"
license = "MIT"

[features]
default = ["dag", "point", "rng", "math", "color", "sod"]
point = []
dag = []
rng = []
math = []
color = []
sod = []

[dependencies]
num-traits = "0.2.19"
